2012-01-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/crypto.c (grub_crypto_autoload): Prevent
	infinite recursion using counter.
	* grub-core/lib/xzembed/xz_dec_stream.c (xz_dec_init): Defer s->crc32
	init to skip it if the magic check fails.
	(dec_stream_header): Init s->crc32.

2012-01-22  Vladimir Serbinenko  <phcoder@gmail.com>
2012-01-22  Zachary Bedell <pendorbound@gmail.com>
2012-01-22  Richard Laager <rlaager@wiktel.com>

	* grub-core/fs/zfs/zfs.c (uberblock_verify): New parameter size.
	All users updated.
	(find_bestub): Determine correct size.
	(fill_vdev_info_real): Fill ashift. New argument. All users updated.
	(scan_disk): Align the size down.
	Call check pool before find_bestub to have ashift.

2012-01-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/relocator.c (malloc_in_range): Remove couple of
	dprintf in no-malloc zone.

2012-01-22  Mario Limonciello <mario_limonciello@dell.com>

	* configure.ac: Add back in test for limits.h.

2012-01-20  Vladimir Serbinenko  <phcoder@gmail.com>

	Support 4K-sector NTFS.

	* include/grub/ntfs.h (GRUB_NTFS_MAX_MFT): Increase to 8.
	(grub_ntfs_data): Remove blocksize.
	* grub-core/fs/ntfs.c (fixup): Fix size comparison.
	Remove data argument. All users updated.

2012-01-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/mips/arc/init.c (grub_total_modules_size): Mark as
	being in .text to avoid dprel references.
	* include/grub/mips/loongson/kernel.h (grub_arch_machine): Likewise.
	* include/grub/mips/loongson/memory.h (grub_arch_memsize): Likewise.
	(grub_arch_highmemsize): Likewise.
	* include/grub/mips/loongson/time.h (grub_arch_busclock): Likewise.
	* include/grub/mips/qemu_mips/memory.h (grub_arch_memsize): Likewise.
	* include/grub/mips/time.h (grub_arch_cpuclock): Likewise.

2012-01-18  Vladimir Serbinenko  <phcoder@gmail.com>

	Support powerpc with GCC that defines __PPC__ but not __powerpc__.
